--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,26 +1,26 @@
 
-<script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+<script src="http://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
-<h3><%=t :ap_comp_t %></h3>
+<h3><%=t '.comp_t' %></h3>
 <dl>
-  <dt><%=t :ap_comp_lng %></dt>
+  <dt><%=t '.comp_lng' %></dt>
   <dd>Ruby on Rails</dd>
-  <dt><%=t :ap_comp_fef %></dt>
+  <dt><%=t '.comp_fef' %></dt>
   <dd>Bootstrap 3.0</dd>
-  <dt><%=t :ap_comp_charts %></dt>
+  <dt><%=t '.comp_charts' %></dt>
   <dd>Highcharts</dd>
-  <dt><%=t :ap_comp_rs %></dt>
+  <dt><%=t '.comp_rs' %></dt>
   <dd>Ion.RangeSlider</dd>
 </dl>
 
-<h3><%=t :ap_roadmap %>
+<h3><%=t '.roadmap' %>
 <a href="http://issues.ipkunin.ru/projects/tracking-derby/roadmap">issues.ipkunin.ru/tracking-derby</a></h3>
 
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne">
       <h4 class="panel-title">
-        <a class="accordion-toggle"><%=t :ap_trpr %></a>
+        <a class="accordion-toggle"><%=t '.trpr' %></a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse">
@@ -118,7 +118,7 @@
     </div>
     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo">
       <h4 class="panel-title">
-        <a class="accordion-toggle"><%=t :ap_fepr %></a>
+        <a class="accordion-toggle"><%=t '.fepr' %></a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse">
