--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default navbar-static-bottom">
   <div class="container">
-    <p class="copyright">© 2014 <%=t :footer_owner %></p>
+    <p class="copyright">© 2014 <%=t 'application.footer.owner' %></p>
   </div>
 </div>
