--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
 <div role="navigation" class="navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to t(:header_home), root_url, :class => 'navbar-brand' %>
+      <%= link_to t('application.header.home'), root_url, :class => 'navbar-brand' %>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-          <%= link_to t(:header_tracks), track_path %>
+          <%= link_to t('application.header.tracks'), track_path %>
         </li>
         <li>
-          <%= link_to t(:header_about), about_path %>
+          <%= link_to t('application.header.about'), about_path %>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -31,20 +31,20 @@
             <ul class='dropdown-menu'>
               <% if current_user.has_role? :admin %>
                 <li>
-                  <%= link_to t(:header_admin_panel), rails_admin_path %>
+                  <%= link_to t('application.header.admin_panel'), rails_admin_path %>
                 </li>
               <% end %>
               <li>
-                <%= link_to 'Профиль', user_path(current_user) %>
+                <%= link_to t('Application.header.profile'), user_path(current_user) %>
               </li>
               <li>
-                <%= link_to t(:header_sign_out), destroy_user_session_path, :method => :delete %>
+                <%= link_to t('application.header.sign_out'), destroy_user_session_path, :method => :delete %>
               </li>
             </ul>
           </li>
         <% else %>
           <li class='dropdown'>
-            <a href='#' class='dropdown-toggle' data-toggle='dropdown'><%=t :header_sign_in %><b class='caret'></b></a>
+            <a href='#' class='dropdown-toggle' data-toggle='dropdown'><%=t 'application.header.sign_in' %><b class='caret'></b></a>
             <ul class='dropdown-menu login-menu'>
               <li>
                 <div class='row'>
@@ -52,21 +52,21 @@
                     <%= form_for(:user, :url => session_path(:user), :class => 'form', :role => 'form') do |f| %>
                       <div class='form-group'>
                         <%= label_tag 'user_email', 'Email address', :for => 'user_email', :class => 'sr-only' %>
-                        <%= f.text_field :email, :class => 'form-control', :type => 'email', :placeholder => t(:header_login_email) %>
+                        <%= f.text_field :email, :class => 'form-control', :type => 'email', :placeholder => t('application.header.login_email') %>
                       </div>
                       <div class='form-group'>
                         <%= label_tag 'user_password', 'Password', :for => 'user_password', :class => 'sr-only' %>
-                        <%= f.password_field :password, :class => 'form-control', :placeholder => t(:header_password) %>
+                        <%= f.password_field :password, :class => 'form-control', :placeholder => t('application.header.password') %>
                       </div>
                       <div class='checkbox'>
                         <label>
-                          <%= f.check_box :remember_me %><%=t :header_remember_me %>
+                          <%= f.check_box :remember_me %><%=t 'application.header.remember_me' %>
                         </label>
                       </div>
                       <div class='form-group'>
-                        <%= f.submit t(:header_sign_in), :class => 'btn btn-success btn-block' %>
+                        <%= f.submit t('application.header.sign_in'), :class => 'btn btn-success btn-block' %>
                       </div>
-                      <%= link_to t(:header_forgot_pass), new_password_path(:user) %>
+                      <%= link_to t('application.header.forgot_pass'), new_password_path(:user) %>
                     <% end %>
                   </div>
                 </div>
@@ -74,7 +74,7 @@
             </ul>
           </li>
           <li>
-            <%= link_to t(:header_sign_up), new_user_registration_path %>
+            <%= link_to t('application.header.sign_up'), new_user_registration_path %>
           </li>
         <% end %>
 
