--- a/app/views/track_select/track_select.html.erb
+++ b/app/views/track_select/track_select.html.erb
@@ -7,16 +7,16 @@
 </script>
 
 <div class='page-header'>
-  <h1><%=t :ts_title %></h1>
+  <h1><%=t '.title' %></h1>
 </div>
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th><%=t :ts_t_number %></th>
-      <th><%=t :ts_t_name %></th>
-      <th><%=t :ts_t_elev %></th>
-      <th><%=t :ts_t_pt_cnt %></th>
+      <th><%=t '.number' %></th>
+      <th><%=t '.name' %></th>
+      <th><%=t '.elev' %></th>
+      <th><%=t '.pt_cnt' %></th>
     </tr>
   </thead>
   <tbody>
