--- a/app/views/static_pages/_new_event_form.html.erb
+++ b/app/views/static_pages/_new_event_form.html.erb
@@ -33,7 +33,7 @@
           <div class="form-group">
             <%= f.label t('static_pages.index.events.form.end_at'), :class => 'col-sm-4 control-label', :for => 'end_at' %>
             <div class="col-sm-8">
-              <%= f.text_field :end_at, :class => 'form-control datepicker', :type => 'date' %>
+              <%= f.text_field :end_at, :class => 'form-control datepicker' %>
             </div>
           </div>
           <div class="form-group">
