--- a/app/views/events/_edit_event_form.html.erb
+++ b/app/views/events/_edit_event_form.html.erb
@@ -21,7 +21,7 @@
     <div class="form-group">
       <%= f.label t('static_pages.index.events.form.end_at'), :class => 'col-sm-3 control-label', :for => 'end_at' %>
       <div class="col-sm-9">
-        <%= f.text_field :end_at, :class => 'form-control datepicker', :type => 'date' %>
+        <%= f.text_field :end_at, :class => 'form-control datepicker' %>
       </div>
     </div>
     <div class="form-group">
