convert double qouted strings to single

--- a/app/assets/stylesheets/flags.css.erb
+++ b/app/assets/stylesheets/flags.css.erb
@@ -1,7 +1,7 @@
 .flag {
 	width: 16px;
 	height: 11px;
-	background:url(<%= asset_path("flags.png") %>) no-repeat
+	background:url(<%= asset_path('flags.png') %>) no-repeat
 }
 
 .flag.flag-ru {background-position: -16px 0}
