--- a/app/views/events/_edit_event_form.html.erb
+++ b/app/views/events/_edit_event_form.html.erb
@@ -50,7 +50,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-9 col-sm-offset-3">
-        <%= f.submit 'Сохранить', :class => "btn btn-primary" %>
+        <%= f.submit 'Сохранить', :class => 'btn btn-primary' %>
       </div>
     </div>
   <% end %>
