--- a/app/assets/stylesheets/ion.rangeSlider.skinFlat.css.erb
+++ b/app/assets/stylesheets/ion.rangeSlider.skinFlat.css.erb
@@ -11,7 +11,7 @@
 .irs-line-right,
 .irs-diapason,
 .irs-slider {
-    background: url(<%= asset_path("sprite-skin-flat.png") %>) repeat-x;
+    background: url(<%= asset_path('sprite-skin-flat.png') %>) repeat-x;
 }
 
 .irs {
