--- a/app/views/events/_add_round_form.html.erb
+++ b/app/views/events/_add_round_form.html.erb
@@ -8,22 +8,22 @@
       <%= form_for [@event, @round], remote: true,:html => {:class => 'form-horizontal', :role => 'form'} do |f| %>
         <div class="modal-body">
           <div class="form-group">
-            <%= f.label "Название раунда", :class => 'col-sm-4 control-label', :for => 'name' %>
+            <%= f.label 'Название раунда', :class => 'col-sm-4 control-label', :for => 'name' %>
             <div class="col-sm-8">
               <%= f.text_field :name, :class => 'form-control' %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label "Дисциплина", :class => 'col-sm-4 control-label', :for => 'place' %>
+            <%= f.label 'Дисциплина', :class => 'col-sm-4 control-label', :for => 'place' %>
             <div class="col-sm-8">
               <%= f.collection_select :discipline, Discipline.all,
-                                      :id, :name, {:promt => true}, {:class => "form-control"} %>
+                                      :id, :name, {:promt => true}, {:class => 'form-control'} %>
             </div>
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-          <%= f.submit "Добавить", :class => "btn btn-primary" %>
+          <%= f.submit 'Добавить', :class => 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
