--- a/app/views/static_pages/_new_event_form.html.erb
+++ b/app/views/static_pages/_new_event_form.html.erb
@@ -51,7 +51,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
-          <%= f.submit 'Далее', :class => "btn btn-primary" %>
+          <%= f.submit 'Далее', :class => 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
