--- a/app/views/track_select/track_select.html.erb
+++ b/app/views/track_select/track_select.html.erb
@@ -24,7 +24,7 @@
       <tr class='clickableRow' style='cursor: pointer' data-url="<%= new_track_path(:cache_id => @key, :index => index) %>">
         <td class="text-info"><%= index %></td>
         <td class="text-info"><%= item['name'] %></td>
-        <td><p class="text-primary" style="display:inline"><%= item['h_up'] %>↑</p><p class="text-success" style="display:inline"> <%= item['h_down'] %>↓</p> <%=t :m_unit %></td>
+        <td><p class="text-primary" style="display:inline"><%= item['h_up'] %>↑</p><p class="text-success" style="display:inline"> <%= item['h_down'] %>↓</p> <%=t 'units.m' %></td>
         <td class="text-info"><%= item['points_count'] %></td>
       </tr>
     <% end %>
