--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+    <%= link_to t('.cancel', :default => t('helpers.links.cancel')),
                 tracks_path, :class => 'btn' %>
   </div>
 <% end %>
