--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -5,28 +5,28 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
-    <%= f.label :password, "New password", class: "col-sm-2 control-label" %>
+    <%= f.label :password, 'New password', class: 'col-sm-2 control-label' %>
     <div class="col-sm-6">
-      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+      <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation, "Confirm new password", class: "col-sm-2 control-label" %>
+    <%= f.label :password_confirmation, 'Confirm new password', class: 'col-sm-2 control-label' %>
     <div class="col-sm-6">
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+      <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group">
     <div class="col-sm-6 col-sm-offset-2">
-      <%= f.submit "Change my password", class: "btn btn-primary" %>
+      <%= f.submit 'Change my password', class: 'btn btn-primary' %>
     </div>
   </div>
 
   <div class="form-group">
     <div class="col-sm-6 col-sm-offset-2">
-      <%= render "devise/shared/links" %>
+      <%= render 'devise/shared/links' %>
     </div>
   </div>
 <% end %>
