--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -4,20 +4,20 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <%= f.label :email, class: "col-sm-2 control-label" %>
+    <%= f.label :email, class: 'col-sm-2 control-label' %>
     <div class="col-sm-6">
-      <%= f.email_field :email, autofocus: true, class: "form-control" %>
+      <%= f.email_field :email, autofocus: true, class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group">
     <div class="col-sm-6 col-sm-offset-2">
-      <%= f.submit "Send me reset password instructions", class: "btn btn-primary" %>
+      <%= f.submit 'Send me reset password instructions', class: 'btn btn-primary' %>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-6 col-sm-offset-2">
-      <%= render "devise/shared/links" %>
+      <%= render 'devise/shared/links' %>
     </div>
   </div>
 <% end %>
