--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,9 +7,17 @@
     </div>
     <div class="col-md-2">
       <% if current_user %>
-        <% if current_user.has_pf? @event %>
+        <% if current_user.pf_status(@event) == 'active' %>
           <button class="btn btn-default event-request disabled">
             Заявка в обработке
+          </button>
+        <% elsif current_user.pf_status(@event) == 'approved' %>
+          <button class="btn btn-success event-request disabled">
+            Заявка подтверждена
+          </button>
+        <% elsif current_user.pf_status(@event) == 'declined' %>
+          <button class="btn btn-danger event-request disabled">
+            Заявка отклонена
           </button>
         <% else %>
           <button class='btn btn-success event-request' data-toggle="modal" data-target="#newParticipationFormModal">
