converting to HAML

--- a/app/views/events/_new_event_form.html.haml
+++ b/app/views/events/_new_event_form.html.haml
@@ -2,7 +2,7 @@
   .modal-dialog
     .modal-content
       .modal-header
-        %button.close{:type => 'button', :data => {dismiss => 'modal'}}
+        %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
           %span{:aria => {:hidden => 'true'}}
             &times;
           %span.sr-only
